--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'application'
 }
 
 repositories {
@@ -16,3 +17,5 @@ test {
 		events "passed", "skipped", "failed"
 	}
 }
+
+mainClassName = 'com.csc.Factorizer'
